  (i.e. hiding) signature items, as in:
  ```ocaml
    module N = struct
      open (struct type t = A | B end)
      module type T = sig type u = t * int end
    end
  ```
  Before, it was succeeding with `module N : sig module type T end`, now it
  fails. Similarly for anonymous functor calls (of the form `F(struct ... end))
  (Clement Blaudeau, review by Gabriel Scherer)

### Other libraries:

* #14046: On Windows, `Unix.kill pid Sys.sigkill` causes the receiving process
  to exit with code ERROR_PROCESS_ABORTED (1067) instead of 0.
  (Nicolás Ojeda Bär, review by Miod Vallat, Antonin Décimo and David Allsopp)

- #14020: Add Unix.unsetenv.
  (Nicolás Ojeda Bär, review by Antonin Décimo and David Allsopp)

### Tools:

- #12139: BUILD_PATH_PREFIX_MAP rewriting in debug-event locations.
  (Richard L. Ford, review by Gabriel Scherer)

* #13638: ocamlmklib exits with code 4 if passed an unrecognised option, as it
  does with an unrecognised file.
  (David Allsopp, review by Antonin Décimo and Sébastien Hinderer)

- #13941, #13961: Fix `ocamltest` variable handing.
  (Damien Doligez, report by Olivier Nicole, review by Gabriel Scherer)

- #13962: Little ocamltest refactors. Fix error handling in C code,
  leaking file descriptors, code style.
  (Antonin Décimo, review by Gabriel Scherer)

- #13966, #13969: Enable "generalized polymorphic #install_printer"
  in the debugger
  (Pierre Boutillier and Gabriel Scherer, review by Florian Angeletti)

- #14063 : Debugger fallbacks to "looking for 'module_name'.ml in the
  loadpath" when seeking source files. It improves hit rate for
  sources of installed packages.
  (Pierre Boutillier, review by Gabriel Scherer)

### Manual and documentation:

* #13975: documented the `[@remove_aliases]` built-in attribute for signatures
  (introduced by #1652 in 2018). Small refactor of the code that fetches the
  attribute.
  (Clement Blaudeau, review by Gabriel Scherer)
