@@ -106,18 +106,11 @@ module Make2 (T' : S) : sig module Id : sig end module Id2 = Id end
   module Id2 = Id
 end;;
 [%%expect{|
-Lines 2-5, characters 57-3:
-2 | .........................................................struct
-3 |   module Id = T'.T.Id
-4 |   module Id2 = Id
-5 | end..
-Error: Signature mismatch:
-       Modules do not match:
-         sig module Id : sig end module Id2 = Id end
-       is not included in
-         sig module Id2 = T'.Term0.Id end
-       In module "Id2":
-       Module "T'.Term0.Id" cannot be aliased
+Lines 1-2, characters 24-53:
+1 | ........................sig module Id : sig end module Id2 = Id end
+2 |                         with module Id := T'.Term0.Id..........
+Error: In this "with" constraint, replacing "Id" by "T'.Term0.Id" would
+       introduce an invalid alias at "Id2"
 |}]
 
 module Make3 (T' : S) = struct
